@@ -3,3 +3,17 @@
 DJANGO_SETTINGS_MODULE=Shop.settings
 # -- recommended but optional:
 python_files = tests.py test_*.py *_tests.py
+
+markers =
+    pre_save_product_category_signal
+    validate_root_category
+    validate_attributes_types
+    update_category_fields
+    inherit_attributes
+    post_save_product_category_signal
+    update_products_after_making_category_root
+    update_products_after_category_attr_changes
+    update_subcategories_after_category_attr_changes
+    merge_attributes_ols_json
+    post_delete_product_category_signal
+    un_root
